--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<h1>prueba</h1>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css" />
+    <title>ecommerce</title>
+  </head>
+  <body>
+    <div class="container">
+      <header class="navbar">
+        <p>contenido superior</p>
+      </header>
+      <asside class="asside-bar">
+        <p>menu lateral</p>
+      </asside>
+      <main class="grid">
+        <div class="item">1 contenido</div>
+        <div class="item">2 contenido</div>
+        <div class="item">3 contenido</div>
+        <div class="item">4 contenido</div>
+        <div class="item">5 contenido</div>
+        <div class="item">6 contenido</div>
+      </main>
+      <footer class="footer">
+        <p>contenido del footer</p>
+      </footer>
+    </div>
+  </body>
+</html>
