--- a/index.html
+++ b/index.html
@@ -9,18 +9,50 @@
   <body>
     <div class="container">
       <header class="navbar">
-        <p>contenido superior</p>
+        <h1>Mi Ecommerce</h1>
       </header>
       <asside class="asside-bar">
-        <p>menu lateral</p>
+        <div>
+          <h3>Categorías</h3>
+        </div>
+        <ul>
+          <li>Perfumes (13)</li>
+          <li>Ropa (21)</li>
+          <li>Accesorios (41)</li>
+          <li>Zapatos (10)</li>
+        </ul>
       </asside>
       <main class="grid">
-        <div class="item">1 contenido</div>
-        <div class="item">2 contenido</div>
-        <div class="item">3 contenido</div>
-        <div class="item">4 contenido</div>
-        <div class="item">5 contenido</div>
-        <div class="item">6 contenido</div>
+        <div class="item">
+          <img src="assets/images/img1.jpg" alt="" />
+          <h3>Perfume Primero</h3>
+          <p>$30.000-.</p>
+          <button>Comprar</button>
+        </div>
+        <div class="item">
+          <img src="assets/images/img1.jpg" alt="" />
+          <h3>Perfume Primero</h3>
+          <p>$30.000-.</p>
+          <button>Comprar</button>
+        </div>
+        <div class="item">
+          <img src="assets/images/img1.jpg" alt="" />
+          <h3>Perfume Primero</h3>
+          <p>$30.000-.</p>
+          <button>Comprar</button>
+        </div>
+        <div class="item">
+          <img src="assets/images/img1.jpg" alt="" />
+          <h3>Perfume Primero</h3>
+          <p>$30.000-.</p>
+          <button>Comprar</button>
+        </div>
+        <div class="item">
+          <img src="assets/images/img1.jpg" alt="" />
+          <h3>Perfume Primero</h3>
+          <p>$30.000-.</p>
+          <button>Comprar</button>
+        </div>
       </main>
       <footer class="footer">
         <p>contenido del footer</p>
