--- a/index.html
+++ b/index.html
@@ -7,56 +7,54 @@
     <title>ecommerce proyecto dl</title>
   </head>
   <body>
-    <div class="container">
-      <header class="navbar">
-        <h1>Mi Ecommerce</h1>
-      </header>
-      <asside class="asside-bar">
-        <div>
-          <h3>Categorías</h3>
-        </div>
-        <ul>
-          <li>Perfumes (13)</li>
-          <li>Ropa (21)</li>
-          <li>Accesorios (41)</li>
-          <li>Zapatos (10)</li>
-        </ul>
-      </asside>
-      <main class="grid">
-        <div class="item">
-          <img src="assets/images/img1.jpg" alt="" />
-          <h3>Perfume Primero</h3>
-          <p>$30.000-.</p>
-          <button>Comprar</button>
-        </div>
-        <div class="item">
-          <img src="assets/images/img1.jpg" alt="" />
-          <h3>Perfume Primero</h3>
-          <p>$30.000-.</p>
-          <button>Comprar</button>
-        </div>
-        <div class="item">
-          <img src="assets/images/img1.jpg" alt="" />
-          <h3>Perfume Primero</h3>
-          <p>$30.000-.</p>
-          <button>Comprar</button>
-        </div>
-        <div class="item">
-          <img src="assets/images/img1.jpg" alt="" />
-          <h3>Perfume Primero</h3>
-          <p>$30.000-.</p>
-          <button>Comprar</button>
-        </div>
-        <div class="item">
-          <img src="assets/images/img1.jpg" alt="" />
-          <h3>Perfume Primero</h3>
-          <p>$30.000-.</p>
-          <button>Comprar</button>
-        </div>
-      </main>
-      <footer class="footer">
-        <p>contenido del footer</p>
-      </footer>
-    </div>
+    <header class="navbar">
+      <h1>Mi Ecommerce</h1>
+    </header>
+    <asside class="asside-bar">
+      <div>
+        <h3>Categorías</h3>
+      </div>
+      <ul>
+        <li><p>Perfumes (13)</p></li>
+        <li><p>Ropa</p>Ropa (21)</li>
+        <li><p>Accesorios (41)</p> </li>
+        <li><p>Zapatos (10)</p></li>
+      </ul>
+    </asside>
+    <main class="grid">
+      <div class="item">
+        <img src="assets/images/img1.jpg" alt="" />
+        <h3>Perfume Primero</h3>
+        <p>$10.000-.</p>
+        <button>Comprar</button>
+      </div>
+      <div class="item">
+        <img src="assets/images/img2.jpg" alt="" />
+        <h3>Perfume Segundo</h3>
+        <p>$20.000-.</p>
+        <button>Comprar</button>
+      </div>
+      <div class="item">
+        <img src="assets/images/img3.jpg" alt="" />
+        <h3>Perfume Tercero</h3>
+        <p>$30.000-.</p>
+        <button>Comprar</button>
+      </div>
+      <div class="item">
+        <img src="assets/images/img4.jpg" alt="" />
+        <h3>Perfume Cuarto</h3>
+        <p>$40.000-.</p>
+        <button>Comprar</button>
+      </div>
+      <div class="item">
+        <img src="assets/images/img5.jpg" alt="" />
+        <h3>Perfume Quinto</h3>
+        <p>$50.000-.</p>
+        <button>Comprar</button>
+      </div>
+    </main>
+    <footer class="pie">
+      <p>@Miecommerce</p>
+    </footer>
   </body>
 </html>
