--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h3>Categorías</h3>
       </div>
       <ul>
-        <li><p>Perfumes (13)</p></li>
-        <li><p>Ropa</p>Ropa (21)</li>
-        <li><p>Accesorios (41)</p> </li>
-        <li><p>Zapatos (10)</p></li>
+        <li><a href=""><p>Perfumes (13)</p></a></li>
+        <li><a href=""><p>Ropa (21)</p></a></li>
+        <li><a href=""><p>Accesorios (41)</p> </a></li>
+        <li><a href=""><p>Zapatos (10)</p></a></li>
       </ul>
     </asside>
     <main class="grid">
@@ -26,31 +26,31 @@
         <img src="assets/images/img1.jpg" alt="" />
         <h3>Perfume Primero</h3>
         <p>$10.000-.</p>
-        <button>Comprar</button>
+        <a class="button-prod" href="http://" target="_blank" rel="noopener noreferrer"><p>Comprar</p></a>
       </div>
       <div class="item">
         <img src="assets/images/img2.jpg" alt="" />
         <h3>Perfume Segundo</h3>
         <p>$20.000-.</p>
-        <button>Comprar</button>
+        <a class="button-prod" href="http://" target="_blank" rel="noopener noreferrer"><p>Comprar</p></a>
       </div>
       <div class="item">
         <img src="assets/images/img3.jpg" alt="" />
         <h3>Perfume Tercero</h3>
         <p>$30.000-.</p>
-        <button>Comprar</button>
+        <a class="button-prod" href="http://" target="_blank" rel="noopener noreferrer"><p>Comprar</p></a>
       </div>
       <div class="item">
         <img src="assets/images/img4.jpg" alt="" />
         <h3>Perfume Cuarto</h3>
         <p>$40.000-.</p>
-        <button>Comprar</button>
+        <a class="button-prod" href="http://" target="_blank" rel="noopener noreferrer"><p>Comprar</p></a>
       </div>
       <div class="item">
         <img src="assets/images/img5.jpg" alt="" />
         <h3>Perfume Quinto</h3>
         <p>$50.000-.</p>
-        <button>Comprar</button>
+        <a class="button-prod" href="http://" target="_blank" rel="noopener noreferrer"><p>Comprar</p></a>
       </div>
     </main>
     <footer class="pie">
